# pyIVIM

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
src/pyivim/: __init__.py  fit.py  main.py
