[metadata]
name = pyivim
version = 1.0
url = https://github.com/inbrainlab/pyIVIM/
license = BSD-3-Clause
license_files = LICENSE.md
author = Lucas da Costa
author_email = lucasdacosta@usp.br
maintainer = Lucas da Costa
maintainer_email = lucasdacosta@usp.br
description = Composable command line interface toolkit
long_description = file: README.md
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = pyivim
package_dir = = src
include_package_data = True
python_requires = >= 3.9
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = pyivim

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    pyivim
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ exports names
    pyivim/pyivim/__init__.py: F401

[mypy]
files = src/pyivim
python_version = 3.9
show_error_codes = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
